--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 numpy
 pandas
-tensorflow
-keras
+tensorflow==2.9.2
 matplotlib
 seaborn
 nltk
@@ -9,7 +8,7 @@ regex
 scikit-learn
 from-root
 google-cloud-storage
-fastapi
-uvicorn
-Jinja2
+fastapi==0.78.0
+uvicorn==0.18.3
+Jinja2==3.1.2
 -e .
